2005-09-08 Anatoly Sokolov <aesok@pautinka.net>

	* include/avr/eeprom.h (eeprom_is_ready): Add new version for AT86RF401
	[Fixed bug #14378]

2005-09-07 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/sleep.h: sleep type 2 has a few extensions
	(tiny2313, tiny13, tiny26), fix these; make the doxygen docs work
	again [bug #12496: about set_sleep_mode() and
	tiny26/tiny2313]

2005-09-07 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/interrupt.h: Fix description of sei() [bug #13557
	overview: small typo in avr-libc-user-manual-1.2.3], emit
	faked function prototypes for sei() and sli() within doxygen.

2005-09-06 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/delay.h: improve documentation, make sure the
	functions will always be inlined.
	Fix for bugs:
	#12495: about Busy-wait delay loops(document)
	#14224: _delay_ms() not inlining if called more than once in a unit
	#14433: Improve documentation of <avr/delay.h>

2005-09-06 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: Minor clarifications: make the volatile
	description a bit more detailed, explain that r2 through r15 are
	available for global register assignment, explain .initN sections
	better, mention that GCC no longer puts zero-init'ed .data
	variables into .data.
	* doc/api/sections.dox: move the C example from .init1 to .init3,
	and explain that this ensures __zero_reg__ is properly set up
	already.

2005-09-01 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Markus F.X.J. Oberhumer:
	* include/stdint.h: use GCC attributes for exact integral
	types. Avoid -Wlong-long warnings by adding __extension__. Remove
	obsolete comments.  Closes patch #3782 overview: modernize
	<stdint.h>

2005-09-01 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdlib/ctype.S: Change all branches into RJMPs
	to guarantee their reachability, closes patch #3912.
	Contributed by Stefano Rodrigo.

2005-08-31 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
