@@ -457,7 +457,7 @@
     is programmed.
  */
 #define boot_lock_fuse_bits_get(address)                   \
-({                                                         \
+(__extension__({                                           \
     uint8_t __result;                                      \
     __asm__ __volatile__                                   \
     (                                                      \
@@ -472,7 +472,7 @@
         : "r0", "r30", "r31"                               \
     );                                                     \
     __result;                                              \
-})
+}))
 
 /** \ingroup avr_boot
     \def boot_page_fill(address, data)
