@@ -1,3 +1,12 @@
+2005-09-08 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	[bug #14266: use __extension__ in avr-libc header files]
+	* include/avr/boot.h: Use __extension__ for brace groups that
+	return an expression value.
+	* include/avr/parity.h: (Ditto.)
+	* include/avr/pgmspace.h: (Ditto.) Document exported types and
+	defines.
+
 2005-09-08 Anatoly Sokolov <aesok@pautinka.net>
 
 	* include/avr/eeprom.h (eeprom_is_ready): Add new version for AT86RF401
